# olxquery

./: .gitignore  Pipfile  README.md  app.py  main.py  pyproject.toml
.github/workflows/: ci.yaml
devutils/: utils.py
devutils/categories/: animais_de_estimacao.py  autos_e_pecas.py  comercio_e_escritorio.py  musica_e_hobbies.py  servicos.py  vagas_de_emprego.py
devutils/data/: ac_location.json  am_location.json  ba_location.json  ce_location.json  mg_location.json  ms_location.json  pb_location.json  pe_location.json  pi_location.json  pr_location.json  rj_location.json  rn_location.json  rs_location.json  sc_location.json  sp_location.json  to_location.json
devutils/data/categories/: agro_e_industria.json  animais_de_estimacao.json  artigos_infantis.json  autos_e_pecas.json  comercio_e_escritorio.json  eletronicos_e_celulares.json  esportes_e_lazer.json  imoveis.json  moda_e_beleza.json  musica_e_hobbies.json  para_a_sua_casa.json  servicos.json  vagas_de_emprego.json
devutils/data/locations/: al_location.json  ap_location.json  df_location.json  es_location.json  go_location.json  ma_location.json  mt_location.json  pa_location.json  ro_location.json  rr_location.json  se_location.json
devutils/locations/: am.py  ce.py  mg.py  pa.py  pe.py  pi.py  to.py
olxquery/: types.py
olxquery/categories/: __init__.py  agro_e_industria.py  animais_de_estimacao.py  artigos_infantis.py  autos_e_pecas.py  comercio_e_escritorio.py  eletrodomesticos.py  eletronicos.py  eletronicos_e_celulares.py  esportes_e_lazer.py  imoveis.py  moda_e_beleza.py  musica_e_hobbies.py  para_a_sua_casa.py  servicos.py  vagas_de_emprego.py
olxquery/locations/: __init__.py  ac.py  al.py  am.py  ap.py  ba.py  ce.py  df.py  es.py  go.py  ma.py  mg.py  ms.py  mt.py  pa.py  pb.py  pe.py  pi.py  pr.py  rj.py  rn.py  ro.py  rr.py  rs.py  sc.py  se.py  sp.py  to.py
olxquery/queries/: __init__.py  base.py  basic.py
tests/: test_basictype.py  test_category.py  test_location.py  test_query.py
