[project]
name = "olxquery"
version = "0.1.0"
description = "Build urls for querying the brazilian version of the famous listing website olx"
authors = [
    {name = "Felipe", email = "felipepaes@tutanota.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
src_paths = ["olxquery", "tests"]


[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.ruff]
lint.select = ["F", "E", "W"]
line-length = 100

[tool.isort]
profile = "black"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.2.1",
]
format = [
    "ruff>=0.6.9",
    "isort>=5.13.2",
]
release = [
    "python-semantic-release>=9.11.0",
]

[tool.pdm.scripts]
test = "pytest -vvv"