[project]
name = "olxquery"
version = "0.1.0"
description = "Build urls for querying the brazilian version of the famous listing website olx"
authors = [
    {name = "Felipe", email = "felipepaes@tutanota.com"},
]
dependencies = []
requires-python = ">=3.10,<=3.13.5"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"


[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "tox>=4.23.2",
]
lint = [
    "ruff>=0.7.1",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
]
build = [
    "python-semantic-release>=9.12.0",
]


[tool.ruff]
lint.select = ["F", "E", "W"]
line-length = 100

[tool.isort]
profile = "black"

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    env_list = py{310,311,312,313}

    [testenv]
    deps = 
        pytest
    commands =
        pytest -s -vvv
"""

[tool.pdm.scripts]
test = "pytest -s -vvv --cov=olxquery"
tox = "tox"
ruff-check = "ruff check"
ruff-format = "ruff format"
isort-check = "isort olxquery tests --check-only --diff"
isort-format = "isort olxquery tests"
lint = {composite = ["ruff-check", "isort-check"]}
format = {composite = ["ruff-format", "isort-format"]}
